@@ -25,7 +25,11 @@ namespace Atlas { namespace Codecs {
 inline const std::string charToHex(char c)
 {
     char hex[3];
+#ifdef WIN32
+    _snprintf(hex, 3, "%x", c);
+#else
     snprintf(hex, 3, "%x", c);
+#endif
     return hex;
 }
 
