@@ -1,5 +1,11 @@
 2001-03-13  Al Riddoch  <alriddoch@zepler.org>
 
+	* src/Net/Stream.cc: Added std:: to flush;
+
+	* src/Codecs/Utility.h: Use _snprintf() for Win32 build.
+
+2001-03-13  Al Riddoch  <alriddoch@zepler.org>
+
 	* src/Objects/*/*.cc: More std:: additions.
 
 2001-03-13  Al Riddoch  <alriddoch@zepler.org>
